// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<tr
  data-project-key="project"
>
  <td
    className="thin"
  >
    <Checkbox
      checked={true}
      onCheck={[Function]}
      thirdState={false}
    />
  </td>
  <td
    className="nowrap hide-overflow project-row-text-cell"
  >
    <ForwardRef(Link)
      className="link-no-underline"
      to={
        {
          "pathname": "/dashboard",
          "search": "?id=project",
        }
      }
    >
      <QualifierIcon
        className="little-spacer-right"
        qualifier="TRK"
      />
      <Tooltip
        overlay="Project"
        placement="left"
      >
        <span>
          Project
        </span>
      </Tooltip>
    </ForwardRef(Link)>
  </td>
  <td
    className="thin nowrap"
  >
    <PrivacyBadgeContainer
      qualifier="TRK"
      visibility="private"
    />
  </td>
  <td
    className="nowrap hide-overflow project-row-text-cell"
  >
    <Tooltip
      overlay="project"
      placement="left"
    >
      <span
        className="note"
      >
        project
      </span>
    </Tooltip>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <span
      className="note"
    >
      —
    </span>
  </td>
  <td
    className="thin nowrap"
  >
    <ProjectRowActions
      currentUser={
        {
          "login": "foo",
        }
      }
      project={
        {
          "key": "project",
          "name": "Project",
          "qualifier": "TRK",
          "visibility": "private",
        }
      }
    />
  </td>
</tr>
`;

exports[`renders: portfolio 1`] = `
<tr
  data-project-key="project"
>
  <td
    className="thin"
  >
    <Checkbox
      checked={true}
      onCheck={[Function]}
      thirdState={false}
    />
  </td>
  <td
    className="nowrap hide-overflow project-row-text-cell"
  >
    <ForwardRef(Link)
      className="link-no-underline"
      to={
        {
          "pathname": "/portfolio",
          "search": "?id=project",
        }
      }
    >
      <QualifierIcon
        className="little-spacer-right"
        qualifier="VW"
      />
      <Tooltip
        overlay="Project"
        placement="left"
      >
        <span>
          Project
        </span>
      </Tooltip>
    </ForwardRef(Link)>
  </td>
  <td
    className="thin nowrap"
  >
    <PrivacyBadgeContainer
      qualifier="VW"
      visibility="private"
    />
  </td>
  <td
    className="nowrap hide-overflow project-row-text-cell"
  >
    <Tooltip
      overlay="project"
      placement="left"
    >
      <span
        className="note"
      >
        project
      </span>
    </Tooltip>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <span
      className="note"
    >
      —
    </span>
  </td>
  <td
    className="thin nowrap"
  >
    <ProjectRowActions
      currentUser={
        {
          "login": "foo",
        }
      }
      project={
        {
          "key": "project",
          "name": "Project",
          "qualifier": "VW",
          "visibility": "private",
        }
      }
    />
  </td>
</tr>
`;

exports[`renders: with lastAnalysisDate 1`] = `
<tr
  data-project-key="project"
>
  <td
    className="thin"
  >
    <Checkbox
      checked={true}
      onCheck={[Function]}
      thirdState={false}
    />
  </td>
  <td
    className="nowrap hide-overflow project-row-text-cell"
  >
    <ForwardRef(Link)
      className="link-no-underline"
      to={
        {
          "pathname": "/dashboard",
          "search": "?id=project",
        }
      }
    >
      <QualifierIcon
        className="little-spacer-right"
        qualifier="TRK"
      />
      <Tooltip
        overlay="Project"
        placement="left"
      >
        <span>
          Project
        </span>
      </Tooltip>
    </ForwardRef(Link)>
  </td>
  <td
    className="thin nowrap"
  >
    <PrivacyBadgeContainer
      qualifier="TRK"
      visibility="private"
    />
  </td>
  <td
    className="nowrap hide-overflow project-row-text-cell"
  >
    <Tooltip
      overlay="project"
      placement="left"
    >
      <span
        className="note"
      >
        project
      </span>
    </Tooltip>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <DateFormatter
      date="2017-04-08T00:00:00.000Z"
    />
  </td>
  <td
    className="thin nowrap"
  >
    <ProjectRowActions
      currentUser={
        {
          "login": "foo",
        }
      }
      project={
        {
          "key": "project",
          "lastAnalysisDate": "2017-04-08T00:00:00.000Z",
          "name": "Project",
          "qualifier": "TRK",
          "visibility": "private",
        }
      }
    />
  </td>
</tr>
`;
